K1J-1328: Filter typed certificates based on provided doctorIds. Delegate provided doctorIds to certificate-service as issuedByStaffIds to only fetch certificates issued by provided doctors.